# bevy_exercise

./: Cargo.toml  README.md
assets/json/: fixed_stars.json  planets.json  util.js  wave_function_collapse.json  wave_function_collapse_map.json
src/: asset_loader.rs  main.rs
src/gravity_system/: camera.rs  collision_detection.rs  debugger.rs  gravitation.rs  mod.rs  motion.rs  planet.rs  running_state.rs
src/spaceship/: asteroids.rs  camera.rs  collision_detection.rs  debug.rs  despawn.rs  mod.rs  movement.rs  spaceship.rs
src/wave_function_collapse/: camera.rs  core.rs  mod.rs  test.rs
