[package]
name = "bevy_study"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy-inspector-egui = "0.27.0"
bevy_blendy_cameras = "0.5.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
